// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SerialConsole in the DISCONNECTED state 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__serial"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <div
          class="pf-c-empty-state__body"
        >
          My text for Disconnected
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          My text for Connect
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SerialConsole in the LOADING state 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__actions-serial"
  >
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      Disconnect
    </button>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      Reset
    </button>
  </div>
  <div
    class="pf-c-console__serial"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <div
          class="pf-c-empty-state__icon"
        >
          <svg
            aria-label="Contents"
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-xl"
            role="progressbar"
            viewBox="0 0 100 100"
          >
            <circle
              class="pf-c-spinner__path"
              cx="50"
              cy="50"
              fill="none"
              r="45"
            />
          </svg>
        </div>
        <div
          class="pf-c-empty-state__body"
        >
          My text for Loading
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SerialConsole with CONNECTED state renders 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__actions-serial"
  >
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      My text for Disconnect
    </button>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      Reset
    </button>
  </div>
  <div
    class="pf-c-console__serial"
  >
    <div
      class="pf-c-console__xterm"
      role="list"
    >
      <div
        class="terminal xterm focus"
        dir="ltr"
        tabindex="0"
      >
        <div
          class="xterm-accessibility"
        >
          <div
            class="xterm-accessibility-tree"
            role="document"
          >
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
            <div
              role="listitem"
              style="height: 0px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-live="assertive"
            class="live-region"
          />
        </div>
        <div
          class="xterm-viewport"
          style="background-color: rgb(0, 0, 0);"
        >
          <div
            class="xterm-scroll-area"
          />
        </div>
        <div
          class="xterm-screen"
        >
          <div
            class="xterm-helpers"
          >
            <textarea
              aria-label="Terminal input"
              aria-multiline="false"
              autocapitalize="off"
              autocorrect="off"
              class="xterm-helper-textarea"
              spellcheck="false"
              tabindex="0"
            />
            <span
              aria-hidden="true"
              class="xterm-char-measure-element"
            >
              W
            </span>
            <div
              class="composition-view"
            />
          </div>
          <canvas
            class="xterm-text-layer"
            style="z-index: 0;"
          />
          <canvas
            class="xterm-selection-layer"
            style="z-index: 1;"
          />
          <canvas
            class="xterm-link-layer"
            style="z-index: 2;"
          />
          <canvas
            class="xterm-cursor-layer"
            style="z-index: 3;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
